<resources>
    <string name="app_name">ToDoList</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="add_new_item_to_list">Add new item to List</string>
    <string name="add_to_existing_item">Add to existing item</string>
    <string name="cancel">Cancel</string>
    <string name="new_item">New Item</string>
    <string name="textview">TextView</string>
    <string name="item_name">Item Name</string>
</resources>
