<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="580dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contextToolbar2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="652dp">

                <TextView
                    android:id="@+id/parentNameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Parent Name"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toTopOf="@id/parentNameEditText"
                    app:layout_constraintStart_toStartOf="@id/parentNameEditText" />

                <EditText
                    android:id="@+id/parentNameEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:ems="10"
                    android:hint="Parent Name"
                    android:inputType="text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/itemNameEditText" />

                <Button
                    android:id="@+id/cancelEditButton"
                    android:layout_width="121dp"
                    android:layout_height="48dp"
                    android:layout_below="@+id/radioGroup"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="56dp"
                    android:layout_marginRight="56dp"
                    android:layout_weight="1"
                    android:text="@string/cancel"
                    app:layout_constraintBottom_toBottomOf="@+id/editConfirmButton"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/priorityTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Priority"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toTopOf="@+id/priorityEditText"
                    app:layout_constraintStart_toStartOf="@+id/priorityEditText" />

                <EditText
                    android:id="@+id/dueTimeEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:ems="10"
                    android:hint="HH:mm:ss"
                    android:inputType="time"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/dueDateEditText" />

                <TextView
                    android:id="@+id/itemNameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:text="@string/item_name"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toTopOf="@+id/itemNameEditText"
                    app:layout_constraintStart_toStartOf="@+id/itemNameEditText" />

                <Button
                    android:layout_width="121dp"
                    android:layout_height="48dp"
                    android:layout_below="@+id/radioGroup"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginStart="52dp"
                    android:layout_marginLeft="52dp"
                    android:layout_marginTop="36dp"
                    android:layout_weight="1"
                    android:text="@string/edit"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/dueTimeEditText"
                    android:id="@+id/editConfirmButton"/>

                <EditText
                    android:id="@+id/dueDateEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:ems="10"
                    android:hint="MM/dd/yyyy"
                    android:inputType="date"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/priorityEditText" />

                <EditText
                    android:id="@+id/itemNameEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="52dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:ems="10"
                    android:hint="Item Name"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/dueTimeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:text="Due Time"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toTopOf="@+id/dueTimeEditText"
                    app:layout_constraintStart_toStartOf="@+id/dueTimeEditText" />

                <EditText
                    android:id="@+id/priorityEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:ems="10"
                    android:hint="1 or 2 or 3 etc"
                    android:inputType="number"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/parentNameEditText"
                    tools:text="1" />

                <TextView
                    android:id="@+id/dueDateTextView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Due Date"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toTopOf="@+id/dueDateEditText"
                    app:layout_constraintStart_toStartOf="@+id/dueDateEditText" />
            </android.support.constraint.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

    <android.support.v7.widget.Toolbar
        android:id="@+id/contextToolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/parentNameTextView2"
        android:layout_width="365dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="19dp"
        android:text="@string/textview"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/contextToolbar2"
        app:layout_constraintStart_toStartOf="@+id/contextToolbar2"
        app:layout_constraintTop_toTopOf="@+id/contextToolbar2" />

</android.support.constraint.ConstraintLayout>